--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body onload="startTime()">
     <div class="container2"> 
-        <h1> Time</h1>
+        <h1>PST Time</h1>
     </div>
    
     <div class="hero">
