--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body onload="startTime()">
     <div class="container2"> 
-        <h1><span class="underline">P.S.T Time</span></h1>
+        <h1>P.S.T Time</h1>
     </div>
    
     <div class="hero">
