--- a/index.html
+++ b/index.html
@@ -9,24 +9,35 @@
 </head>
 
 <body onload="startTime()">
-    <div class="container2"> 
-        <h1>P.S.T Time</h1>
-    </div>
    
+        <h1>P.S.T Time</h1>
+  
+
     <div class="hero">
-    <div class="container">
-        <div class="clock">
-            <span id="hrs">00</span>
-            <span>:</span>
-            <span id="mnts">00</span>
-            <span>:</span>
-            <span id="scnds">00</span>
-            <span id="am-pm"></span>
-      
+        <div class="container">
+            <div class="clock">
+                <span id="hrs">00</span>
+                <span>:</span>
+                <span id="mnts">00</span>
+                <span>:</span>
+                <span id="scnds">00</span>
+                <span id="am-pm"></span>
+
+            </div>
         </div>
     </div>
-</div>
-    
+
+    <div class="container2">
+        <span id="month">0</span>
+        <span class="slash">/</span>
+        <span id="day">0</span>
+        <span class="slash">/</span>
+        <span id="year"></span>
+    </div>
+
+
+
+
     <script src="index.js"></script>
 
 
