--- a/clock.html
+++ b/clock.html
@@ -9,9 +9,9 @@
 </head>
 
 <body onload="startTime()">
-   
-        <h1>P.S.T Time</h1>
-  
+
+    <h1>P.S.T Time</h1>
+
 
     <div class="hero">
         <div class="container">
@@ -26,14 +26,20 @@
             </div>
         </div>
     </div>
-
+   
     <div class="container2">
-        <span id="day">0</span>
+        <span id="date">0</span>
         <span class="slash">/</span>
         <span id="month">0</span>
         <span class="slash">/</span>
         <span id="year"></span>
     </div>
+
+    <div class="container3"> 
+        <span id="day"></span>
+    </div>
+
+
 
 
 
