--- a/clock.html
+++ b/clock.html
@@ -28,11 +28,14 @@
     </div>
    
     <div class="container2">
-        <span id="date">0</span>
-        <span class="slash">/</span>
-        <span id="month">0</span>
-        <span class="slash">/</span>
-        <span id="year"></span>
+        <div class="date-month-year">  
+            <span id="date">0</span>
+            <span class="slash">/</span>
+            <span id="month">0</span>
+            <span class="slash">/</span>
+            <span id="year"></span>
+        </div>
+      
     </div>
 
     <div class="container3"> 
