--- a/clock.html
+++ b/clock.html
@@ -30,9 +30,9 @@
     <div class="container2">
         <div class="date-month-year">  
             <span id="date">0</span>
-            <span class="slash">/</span>
+            <span class="slash">&#47;</span>
             <span id="month">0</span>
-            <span class="slash">/</span>
+            <span class="slash">&#47;</span>
             <span id="year"></span>
         </div>
       
