--- a/clock.html
+++ b/clock.html
@@ -36,9 +36,9 @@
 
     <div class="container2">
         <div class="date-month-year">
-            <span id="date">0</span>
+            <span id="date"></span>
 
-            <span id="month">0</span>
+            <span id="month"></span>
 
             <span id="year"></span>
         </div>
