Add multiple comment

--- a/clock.html
+++ b/clock.html
@@ -20,7 +20,7 @@
 
     
 
-
+<!--Display Clock -->
         <div class="container">
             <div class="clock">
                 <span id="hrs">00</span>
@@ -33,7 +33,7 @@
             </div>
         </div>
     
-
+<!--Display month-date-year -->
     <div class="container2">
         <div class="date-month-year">
             <span id="date"></span>
@@ -44,7 +44,7 @@
         </div>
 
     </div>
-
+<!--Display Weekdays -->
     <div class="container3">
         <span id="day"></span>
     </div>
