--- a/clock.html
+++ b/clock.html
@@ -16,7 +16,9 @@
 
 <body onload="startTime()">
 
-    <h1>Clock</h1>
+    <img class="logo" src="image/Group 1.png">
+
+   
 
 
     <h1 class="title">P.S.T Time</h1>
