--- a/clock.html
+++ b/clock.html
@@ -17,7 +17,7 @@
 <body onload="startTime()">
 
     <div class="logo-container">
-        <div>
+        <div class="container5">
             <img class="logo" src="image/Group 1.png">
         </div>
         
