--- a/clock.html
+++ b/clock.html
@@ -18,59 +18,61 @@
     </head>
 
     <body onload="startTime()">
-
-        <div class="logo-container">
-            <div class="container5">
-                <img class="logo" src="image/Group 1.png">
-            </div>
-
+<main>
+    <div class="logo-container">
+        <div class="container5">
+            <img class="logo" src="image/Group 1.png">
         </div>
 
-
-
-
-        <h1 class="title">P.S.T Time</h1>
+    </div>
 
 
 
 
-        <!--Display Clock -->
-
-        <div class="container">
-            <div class="clock">
-                <span id="hrs">00</span>
-                <span>:</span>
-                <span id="mnts">00</span>
-                <span>:</span>
-                <span id="scnds">00</span>
-                <span id="am-pm"></span>
-
-            </div>
-        </div>
+    <h1 class="title">P.S.T Time</h1>
 
 
 
-        <!--Display month-date-year -->
 
-        <div class="container2">
-            <div class="date-month-year">
+    <!--Display Clock -->
 
-                <span id="date"></span>
-
-                <span id="month"></span>
-
-                <span id="year"></span>
-            </div>
+    <div class="container">
+        <div class="clock">
+            <span id="hrs">00</span>
+            <span>:</span>
+            <span id="mnts">00</span>
+            <span>:</span>
+            <span id="scnds">00</span>
+            <span id="am-pm"></span>
 
         </div>
+    </div>
 
 
-        <!--Display Weekdays -->
-        <div class="container3">
-            <span id="day"></span>
+
+    <!--Display month-date-year -->
+
+    <div class="container2">
+        <div class="date-month-year">
+
+            <span id="date"></span>
+
+            <span id="month"></span>
+
+            <span id="year"></span>
         </div>
 
+    </div>
 
+
+    <!--Display Weekdays -->
+    <div class="container3">
+        <span id="day"></span>
+    </div>
+
+
+</main>
+        
 
 
 
