--- a/clock.html
+++ b/clock.html
@@ -52,7 +52,7 @@
 
         </div>
         <div class="container2">
-            <div>
+            <div class="date-month-year">
                 <span id="date"></span>
 
                 <span id="month"></span>
