add more time zone

--- a/clock.html
+++ b/clock.html
@@ -35,6 +35,10 @@
         <p class="shanghai">Shanghai-China</p>
         <span id="shanghai-china"></span>
        </div>
+       <div class="sydney-container">
+        <p class="Sydney">Sydney, Australia</p>
+        <span id="sydney-Aus"></span>
+       </div>
     </div>
     
 
