--- a/clock.html
+++ b/clock.html
@@ -45,7 +45,7 @@
 
 
     <div class="title-container">
-        <h1 class="title">PST Time</h1>
+        <h1 class="title">P.S.T Time</h1>
     </div>
 
     <div class="time-container">
