--- a/clock.html
+++ b/clock.html
@@ -20,7 +20,7 @@
 <body>
     <div class="main-container">
         <div class="berlin-container">
-            <p class="berlin">Berlin, Germany</p>
+            <p class="berlin">Berlin,Germany</p>
             <span id="berlin-ger"></span>
 
             <div class="los-container">
@@ -61,7 +61,7 @@
             </div>
 
             <div class="shanghai-container">
-                <p class="shanghai">Shanghai-China</p>
+                <p class="shanghai">Shanghai,China</p>
                 <span id="shanghai-china"></span>
             </div>
 
