--- a/clock.html
+++ b/clock.html
@@ -51,13 +51,11 @@
         <div class="newyork-container">
 
             <p class="newyork">New York</p>
-
-
             <span id="new-york"></span>
-
             <div class="tokyojap-container">
                 <p class="tokyojap">Tokyo</p>
                 <span id="tokyo-jap"></span>
+                <span id="tokyo-day"></span>
             </div>
 
             <div class="shanghai-container">
