add more timezone

--- a/clock.html
+++ b/clock.html
@@ -39,6 +39,10 @@
                 <p class="Oslo">Oslo,Norway</p>
                 <span id="oslo-norway"></span>
             </div>
+            <div class="Ottawa-container">
+                <p class="ottawa">Ottawa,Canada</p>
+                <span id="ottawa-can"></span>
+            </div>
 
         </div>
 
@@ -68,6 +72,10 @@
             <div class="sydney-container">
                 <p class="Sydney">Sydney, Australia</p>
                 <span id="sydney-Aus"></span>
+                <div class="newzealand-container">
+                    <p class="newZealand">New Zealand</p>
+                    <span id="new-zeal"></span>
+                </div>
             </div>
         </div>
 
