--- a/clock.html
+++ b/clock.html
@@ -135,7 +135,7 @@
 
         </main>
 
-        <script src="clockdate.js"></script>
+        <script defer src="clockdate.js"></script>
         
 
 
