--- a/clock.html
+++ b/clock.html
@@ -137,15 +137,8 @@
 
 
                     <div class="container3">
-
-
-
-                        <span id="day"></span>
-                        <span id="date"></span>
-
-                        <span id="month"></span>
-
-                        <span id="year"></span>
+<span id="weekday"></span>
+                        <p id="manila-date"></p>
 
 
 
