--- a/clock.html
+++ b/clock.html
@@ -135,14 +135,14 @@
                     <span id="scnds">00</span>
                     <span id="am-pm"></span>
 
+                    <div class="outer-cont">
+                        <div class="container3">
+                            <span id="weekday"></span>
+                            <p id="manila-date"></p>
 
-                    <div class="container3">
-                        <span id="weekday"></span>
-                        <p id="manila-date"></p>
-
-
-
+                        </div>
                     </div>
+
 
                 </div>
             </div>
