--- a/clock.html
+++ b/clock.html
@@ -18,7 +18,10 @@
 </head>
 
 <body>
-
+    <div class="weather-container">
+        <h1 class="weather-title">Weather App</h1>
+        <div id="weather"></div>
+    </div>
 
     <div class="main-container">
         <div class="berlin-container">
@@ -102,8 +105,6 @@
 
         <main>
             <div class="container">
-
-
                 <div class="clocks">
                     <div class="hand hour" data-hour-hand></div>
                     <div class="hand minute" data-minute-hand></div>
@@ -140,6 +141,7 @@
                             <span id="weekday"></span>
                             <p id="manila-date"></p>
 
+
                         </div>
                     </div>
 
@@ -148,8 +150,9 @@
             </div>
 
         </main>
-
+        <script src="weather.js"></script>
         <script defer src="clockdate.js"></script>
+
 
 
 
