--- a/clock.html
+++ b/clock.html
@@ -153,7 +153,7 @@
 
 
         </main>
-        <script src="weather.js"></script>
+        <script defer src="weather.js"></script>
         <script defer src="clockdate.js"></script>
 
 
